@@ -18,13 +18,16 @@ package org.graylog.plugins.pipelineprocessor.rest;
 
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.ImmutableSortedSet;
 import com.swrve.ratelimitedlogger.RateLimitedLog;
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
 import io.swagger.annotations.ApiParam;
 import org.apache.shiro.authz.annotation.RequiresAuthentication;
 import org.apache.shiro.authz.annotation.RequiresPermissions;
+import org.graylog.plugins.pipelineprocessor.ast.Pipeline;
 import org.graylog.plugins.pipelineprocessor.ast.Rule;
+import org.graylog.plugins.pipelineprocessor.ast.Stage;
 import org.graylog.plugins.pipelineprocessor.ast.functions.Function;
 import org.graylog.plugins.pipelineprocessor.audit.PipelineProcessorAuditEventTypes;
 import org.graylog.plugins.pipelineprocessor.db.PaginatedRuleService;
@@ -37,16 +40,23 @@ import org.graylog.plugins.pipelineprocessor.db.RuleService;
 import org.graylog.plugins.pipelineprocessor.parser.FunctionRegistry;
 import org.graylog.plugins.pipelineprocessor.parser.ParseException;
 import org.graylog.plugins.pipelineprocessor.parser.PipelineRuleParser;
+import org.graylog.plugins.pipelineprocessor.processors.ConfigurationStateUpdater;
+import org.graylog.plugins.pipelineprocessor.processors.PipelineInterpreter;
+import org.graylog.plugins.pipelineprocessor.simulator.PipelineInterpreterTracer;
 import org.graylog2.audit.jersey.AuditEvent;
 import org.graylog2.audit.jersey.NoAuditEvent;
 import org.graylog2.database.NotFoundException;
 import org.graylog2.database.PaginatedList;
+import org.graylog2.plugin.Message;
 import org.graylog2.plugin.rest.PluginRestResource;
 import org.graylog2.rest.models.PaginatedResponse;
 import org.graylog2.search.SearchQuery;
 import org.graylog2.search.SearchQueryField;
 import org.graylog2.search.SearchQueryParser;
+import org.graylog2.shared.messageq.noop.NoopMessageQueueAcknowledger;
+import org.graylog2.shared.metrics.MetricRegistryFactory;
 import org.graylog2.shared.rest.resources.RestResource;
+import org.graylog2.streams.StreamService;
 import org.joda.time.DateTime;
 import org.joda.time.DateTimeZone;
 
@@ -68,9 +78,11 @@ import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
 import static org.graylog.plugins.pipelineprocessor.processors.PipelineInterpreter.getRateLimitedLog;
@@ -98,6 +110,8 @@ public class RuleResource extends RestResource implements PluginRestResource {
     private final PaginatedRuleService paginatedRuleService;
     private final SearchQueryParser searchQueryParser;
     private final PipelineServiceHelper pipelineServiceHelper;
+    private final ConfigurationStateUpdater configurationStateUpdater;
+    private final StreamService streamService;
 
     @Inject
     public RuleResource(RuleService ruleService,
@@ -106,7 +120,9 @@ public class RuleResource extends RestResource implements PluginRestResource {
                         PipelineRuleParser pipelineRuleParser,
                         PaginatedRuleService paginatedRuleService,
                         FunctionRegistry functionRegistry,
-                        PipelineServiceHelper pipelineServiceHelper) {
+                        PipelineServiceHelper pipelineServiceHelper,
+                        ConfigurationStateUpdater configurationStateUpdater,
+                        StreamService streamService) {
         this.ruleService = ruleService;
         this.pipelineService = pipelineService;
         this.ruleMetricsConfigService = ruleMetricsConfigService;
@@ -114,6 +130,8 @@ public class RuleResource extends RestResource implements PluginRestResource {
         this.functionRegistry = functionRegistry;
         this.paginatedRuleService = paginatedRuleService;
         this.pipelineServiceHelper = pipelineServiceHelper;
+        this.configurationStateUpdater = configurationStateUpdater;
+        this.streamService = streamService;
 
         this.searchQueryParser = new SearchQueryParser(RuleDao.FIELD_TITLE, SEARCH_FIELD_MAPPING);
     }
@@ -124,12 +142,7 @@ public class RuleResource extends RestResource implements PluginRestResource {
     @RequiresPermissions(PipelineRestPermissions.PIPELINE_RULE_CREATE)
     @AuditEvent(type = PipelineProcessorAuditEventTypes.RULE_CREATE)
     public RuleSource createFromParser(@ApiParam(name = "rule", required = true) @NotNull RuleSource ruleSource) throws ParseException {
-        final Rule rule;
-        try {
-            rule = pipelineRuleParser.parseRule(ruleSource.id(), ruleSource.source(), false);
-        } catch (ParseException e) {
-            throw new BadRequestException(Response.status(Response.Status.BAD_REQUEST).entity(e.getErrors()).build());
-        }
+        final Rule rule = parseRuleOrThrow(ruleSource.id(), ruleSource.source(), false);
         final DateTime now = DateTime.now(DateTimeZone.UTC);
         final RuleDao newRuleSource = RuleDao.builder()
                 .title(rule.name()) // use the name from the parsed rule source.
@@ -151,18 +164,20 @@ public class RuleResource extends RestResource implements PluginRestResource {
         return RuleSource.fromDao(pipelineRuleParser, save);
     }
 
+    private Rule parseRuleOrThrow(String ruleId, String source, boolean silent) {
+        try {
+            return pipelineRuleParser.parseRule(ruleId, source, silent);
+        } catch (ParseException e) {
+            throw new BadRequestException(Response.status(Response.Status.BAD_REQUEST).entity(e.getErrors()).build());
+        }
+    }
+
     @ApiOperation(value = "Parse a processing rule without saving it", notes = "")
     @POST
     @Path("/parse")
     @NoAuditEvent("only used to parse a rule, no changes made in the system")
     public RuleSource parse(@ApiParam(name = "rule", required = true) @NotNull RuleSource ruleSource) throws ParseException {
-        final Rule rule;
-        try {
-            // be silent about parse errors here, many requests will result in invalid syntax
-            rule = pipelineRuleParser.parseRule(ruleSource.id(), ruleSource.source(), true);
-        } catch (ParseException e) {
-            throw new BadRequestException(Response.status(Response.Status.BAD_REQUEST).entity(e.getErrors()).build());
-        }
+        final Rule rule = parseRuleOrThrow(ruleSource.id(), ruleSource.source(), true);
         final DateTime now = DateTime.now(DateTimeZone.UTC);
         return RuleSource.builder()
                 .title(rule.name())
@@ -173,6 +188,38 @@ public class RuleResource extends RestResource implements PluginRestResource {
                 .build();
     }
 
+    @ApiOperation(value = "Simulate a single processing rule")
+    @POST
+    @Consumes(MediaType.APPLICATION_JSON)
+    @Path("/simulate")
+    @NoAuditEvent("only used to test a rule, no changes made in the system")
+    public Message simulate(
+            @ApiParam(name = "request", required = true) @NotNull SimulateRuleRequest request
+    ) throws NotFoundException {
+        final Rule rule = parseRuleOrThrow(request.ruleSource().id(), request.ruleSource().source(), true);
+        Stage stage = Stage.builder()
+                .stage(0)
+                .ruleReferences(Collections.emptyList())
+                .match(Stage.Match.PASS)
+                .build();
+        stage.setRules(List.of(rule));
+        Pipeline pipeline = Pipeline.builder()
+                .stages(ImmutableSortedSet.of(stage))
+                .name("dummyPipeline")
+                .id(UUID.randomUUID().toString())
+                .build();
+        stage.setPipeline(pipeline);
+
+        PipelineInterpreter pipelineInterpreter = new PipelineInterpreter(
+                new NoopMessageQueueAcknowledger(), MetricRegistryFactory.create(), configurationStateUpdater);
+        final PipelineInterpreterTracer pipelineInterpreterTracer = new PipelineInterpreterTracer();
+        Message message = new Message(request.message(), "127.0.0.1", DateTime.now(DateTimeZone.UTC));
+        pipelineInterpreter.evaluateStage(stage, message, message.getId(),
+                new ArrayList<>(), Collections.emptySet(),
+                pipelineInterpreterTracer.getSimulatorInterpreterListener());
+        return message;
+    }
+
     @ApiOperation(value = "Get all processing rules")
     @GET
     @RequiresPermissions(PipelineRestPermissions.PIPELINE_RULE_READ)
@@ -180,7 +227,7 @@ public class RuleResource extends RestResource implements PluginRestResource {
         final Collection<RuleDao> ruleDaos = ruleService.loadAll();
         return ruleDaos.stream()
                 .map(ruleDao -> RuleSource.fromDao(pipelineRuleParser, ruleDao))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @GET
@@ -209,7 +256,7 @@ public class RuleResource extends RestResource implements PluginRestResource {
                 .findPaginated(searchQuery, page, perPage, sort, order);
         final List<RuleSource> ruleSourceList = result.stream()
                 .map(dao -> RuleSource.fromDao(pipelineRuleParser, dao))
-                .collect(Collectors.toList());
+                .toList();
         final PaginatedList<RuleSource> rules = new PaginatedList<>(ruleSourceList,
                 result.pagination().total(), result.pagination().page(), result.pagination().perPage());
         return PaginatedResponse.create("rules", rules,
@@ -236,11 +283,11 @@ public class RuleResource extends RestResource implements PluginRestResource {
                                             .id(dao.id())
                                             .title(dao.title())
                                             .build())
-                                    .collect(Collectors.toList())
+                                    .toList()
                     );
                 });
 
-        return ImmutableMap.of("used_in_pipelines", result);
+        return Map.of("used_in_pipelines", result);
     }
 
 
@@ -263,7 +310,7 @@ public class RuleResource extends RestResource implements PluginRestResource {
         return ruleDaos.stream()
                 .map(ruleDao -> RuleSource.fromDao(pipelineRuleParser, ruleDao))
                 .filter(rule -> isPermitted(PipelineRestPermissions.PIPELINE_RULE_READ, rule.id()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @ApiOperation(value = "Modify a processing rule", notes = "It can take up to a second until the change is applied")
@@ -275,12 +322,7 @@ public class RuleResource extends RestResource implements PluginRestResource {
         checkPermission(PipelineRestPermissions.PIPELINE_RULE_EDIT, id);
 
         final RuleDao ruleDao = ruleService.load(id);
-        final Rule rule;
-        try {
-            rule = pipelineRuleParser.parseRule(id, update.source(), false);
-        } catch (ParseException e) {
-            throw new BadRequestException(Response.status(Response.Status.BAD_REQUEST).entity(e.getErrors()).build());
-        }
+        final Rule rule = parseRuleOrThrow(id, update.source(), false);
         final RuleDao toSave = ruleDao.toBuilder()
                 .title(rule.name())
                 .description(update.description())
